--- a/Views/admin/css/style.css
+++ b/Views/admin/css/style.css
@@ -1,10 +1,243 @@
 body{
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 h1.site-title{
+    text-align: left;
     font-size: 40px;
     font-weight: bolder;
     color: blue;
     margin-top: 20px;
+}
+
+.header{
+    display: flex;
+    justify-content: space-around;
+    background-color: #330099;
+    padding: 1px;
+    color: white;
+    box-shadow: 0 4px 2px -2px gray;
+}
+
+.header-links{
+    margin-top: 30px;
+}
+
+.header-links a{
+    text-decoration: none;
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    color: white;
+}
+
+a#btn-profile, a#btn-dashboard{
+    background-color: rgb(52, 167, 27);
+}
+
+a#btn-profile:hover, a#btn-dashboard:hover{
+    background-color: rgb(122, 216, 101);
+}
+
+a#btn-signout{
+    background-color: red;
+}
+
+a#btn-signout:hover{
+    background-color: rgb(210, 62, 62);
+}
+
+.list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 100px;
+}
+.list .item{
+    margin-bottom: 10px;
+    padding: 10px;
+    width: 500px;
+    background-color: #9999ff;
+    color: white;
+    box-shadow: 3px 3px 3px gray;
+}
+
+.item a{
+    text-decoration: none;
+}
+
+.item:hover{
+    background-color: #8162bf;
+    cursor: pointer;
+}
+
+.item p{
+    color: #330099;
+}
+
+.action-btn-area{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+a.action-btn{
+    text-align: center;
+    background-color: rgb(52, 167, 27);
+    text-decoration: none;
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 3px;
+    color: white;
+}
+
+a.action-btn:hover{
+    background-color: rgb(122, 216, 101);
+}
+
+.form-wrapper{
+    background-color: #5151d1;
+	border-radius:5px;
+	height:520px;
+	width:450px;
+	max-width:100%;
+	overflow:hidden;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    box-shadow: 3px 3px 3px gray;
+}
+
+.add-customer-form-wrapper{
+    min-height: 1020px;
+}
+
+.edit-customer-form-wrapper{
+    min-height: 1000px;
+}
+
+.form-container{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	min-height:700px;
+	margin:0;
+}
+.edit-form{
+    padding:30px 40px;
+}
+
+.form-control{
+	margin-bottom:10px;
+	padding-bottom:10px;
+	position:relative;
+}
+.form-control label{
+	display:block;
+    color: white;
+	margin-bottom:5px;
+}
+
+.form-control-radio{
+    color: white;
+}
+
+.form-control input{
+	display:block;
+    height: 40px;
+	margin-bottom:5px;
+	width:100%;
+	border-radius:3px;
+    padding: 5px;
+}
+
+form *{
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+
+.form-control small, .form-control-radio small{
+    visibility: hidden;
+    color: red;
+}
+
+.edit-form button{
+	background-color:#127a3a;
+	border-radius:4px;
+	border:2px solid #127a3a;
+	color:#fff;
+	width:100%;
+	font-size:16px;
+    height: 40px;
+    box-shadow: 2px 3px 3px rgb(41, 41, 41);
+    margin-top: 20px
+}
+
+.edit-form button:hover{
+    cursor: pointer;
+}
+
+.upper{
+	text-align:center;
+    color: #fff;
+}
+
+.upper p{
+    font-weight: bolder;
+}
+
+.feedback-success p{
+    background-color: #36975b;
+    color: white;
+    padding: 10px;
+}
+
+.feedback-fail p{
+    background-color: #c90000;
+    color: white;
+    padding: 10px;
+}
+
+p.invalid-edit{
+    color: red;
+}
+p.valid-edit{
+    color: green;
+}
+
+/*View Customers*/
+.add-btn-area{
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+.add-btn{
+    background-color: rgb(52, 167, 27);
+    text-decoration: none;
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 3px;
+    color: white;
+}
+
+.info-table{
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+.info-table td, .info-table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+  
+.info-table tr:nth-child(even){background-color: #f2f2f2;}
+  
+.info-table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #5151d1;
+    color: white;
 }
